<resources>
    <string name="app_name">WikiArt</string>
    <string name="title_paintings">Paintings</string>
    <string name="title_artists">Artists</string>
    <string name="title_search">Search</string>
    <string name="title_support">Support</string>
    <string name="title_notifications">Notifications</string>
    <string name="category_featured">Featured</string>
    <string name="category_popular">Popular</string>
    <string name="category_high_res">High Resolution</string>
    <string name="category_media">Media</string>
    <string name="category_style">Style</string>
    <string name="category_genre">Genre</string>
    <string name="category_favorites">Favorites</string>
    <string name="category_female">Female</string>
    <string name="category_recent">Recent</string>
    <string name="layout_list">List</string>
    <string name="layout_grid">Grid</string>
    <string name="layout_sheet">Sheet</string>
    <string name="action_options">Options</string>
    <string name="section_all">All Sections</string>
    <string name="title_painting_detail">Painting</string>
    <string name="title_artist_detail">Artist</string>
    <string name="support_feedback_title">We would love your feedback</string>
    <string name="support_email_hint">Your email (optional)</string>
    <string name="support_message_hint">Message</string>
    <string name="support_send_feedback">Send Feedback</string>
    <string name="support_donate">Donate</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="share_painting">Share painting</string>
    <string name="see_all">See All</string>
    <string name="title_artist_paintings">Paintings</string>
    <string name="no_results">No results</string>
    <string name="error_generic">An error occurred</string>
    <string name="share">Share</string>
    <string name="buy">Buy</string>
    <string name="related_artworks">Related artworks</string>
    <string name="support_email_subject">App Feedback</string>
    <string name="support_email_from">From:</string>
    <string name="support_email_chooser">Send Email</string>
    <string name="support_no_email_app">No email app found</string>
    <string name="suggestions_header">Suggestions</string>
    <string name="home_placeholder">This is the home fragment</string>
    <string name="dashboard_placeholder">This is the dashboard fragment</string>
    <string name="notifications_placeholder">This is the notifications fragment</string>
    <string name="no_notifications">No notifications yet</string>
    <string name="painting_image">Painting image</string>
    <string name="artist_image">Artist image</string>
    <string name="content_description_painting">%1$s by %2$s</string>
</resources>
