<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_paintings">

    <fragment
        android:id="@+id/navigation_paintings"
        android:name="com.example.wikiart.ui.paintings.PaintingListFragment"
        android:label="@string/title_paintings"
        tools:layout="@layout/fragment_painting_list" >
        <action
            android:id="@+id/action_paintingListFragment_to_paintingDetailFragment"
            app:destination="@id/paintingDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_artists"
        android:name="com.example.wikiart.ui.artists.ArtistsFragment"
        android:label="@string/title_artists"
        tools:layout="@layout/fragment_artists" >
        <action
            android:id="@+id/action_artistsFragment_to_artistDetailFragment"
            app:destination="@id/artistDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.wikiart.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_support"
        android:name="com.example.wikiart.ui.support.SupportFragment"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/paintingDetailFragment"
        android:name="com.example.wikiart.ui.paintings.PaintingDetailFragment"
        android:label="@string/title_painting_detail"
        tools:layout="@layout/fragment_painting_detail" >
        <action
            android:id="@+id/action_paintingDetailFragment_self"
            app:destination="@id/paintingDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/artistDetailFragment"
        android:name="com.example.wikiart.ui.artists.ArtistDetailFragment"
        android:label="@string/title_artist_detail"
        tools:layout="@layout/fragment_artist_detail" >
        <action
            android:id="@+id/action_artistDetailFragment_to_paintingDetailFragment"
            app:destination="@id/paintingDetailFragment" />
    </fragment>
</navigation>
