<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/layoutGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/listButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_list" />

        <RadioButton
            android:id="@+id/gridButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_grid" />

        <RadioButton
            android:id="@+id/sheetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_sheet" />
    </RadioGroup>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@android:string/ok" />

</LinearLayout>
